--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,10 @@
 [versions]
-hiltAndroidGradlePlugin = "2.51.1"
+coilCompose = "2.7.0"
+hiltAndroidGradlePlugin = "2.56.1"
 hiltCompiler = "1.2.0"
-retrofit = "2.9.0"
+retrofit = "2.11.0"
 agp = "8.9.0"
-datastorePreferences = "1.1.3"
+datastorePreferences = "1.1.4"
 kotlin = "2.1.10"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -11,9 +12,9 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
-composeBom = "2025.03.00"
+composeBom = "2025.03.01"
 lifecycleViewmodelCompose = "2.8.7"
-loggingInterceptor = "4.9.3"
+loggingInterceptor = "4.12.0"
 material3 = "1.3.1"
 navigationCompose = "2.8.9"
 compose-compiler = "1.5.8"
@@ -24,6 +25,7 @@ androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = 
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltCompiler" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroidGradlePlugin" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroidGradlePlugin" }
